tests/negative/parser/while-semi.orng
fn main() -> Int
    while let x = 4 true {}
    0